--- a/style.css
+++ b/style.css
@@ -1,40 +1,53 @@
+:root {
+    --bgclr: coral;
+    --mbgclr:rgb(80,162,255);
+    --nbgclr:#ec1616;
+    --txtclr:white;
+    --main-padding: 15px;
+}
 html {
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-background-color: #000000;
-color: white;
-display: inline-block;
-margin: 0px auto;
-text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: #000000;
+    color:var(--txtclr);
+    display: inline-block;
+    margin: 0px auto;
+    text-align: center;
 }
-
 .button {
-padding: 10px 22px;
-text-align: center;
-text-decoration: none;
-display: inline-block;
-font-family: Verdana;
-font-size: 12px;
-margin: 4px 4px;
-cursor: pointer;
-border-radius: 4px;
-background-color: transparent;
-color: white;
+    padding: 10px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: Verdana;
+    font-size: 12px;
+    font-weight: bold;
+    margin: 4px 4px;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: transparent;
+    color:var(--txtclr);
 }
-
 .b1 {
-border: 2px solid royalblue;
+    border: 2px solid var(--mbgclr);
 }
-
 .b2 {
-border: 2px solid #ec1616;
+    border: 2px solid var(--bgclr);
 }
-
-/* .b1 */
-
-p {
-text-decoration: none;
-color: aqua;
-font-size: 22px;
-margin: 2px;
-cursor: pointer;
+.b1:hover{background-color:var(--mbgclr);text-transform:uppercase;}
+.b2:hover{background-color:var(--bgclr);text-transform:uppercase;}
+form p {
+    text-decoration: none;
+    color: rgb(0, 255, 157);
+    font-size: 16px;
+    margin: 2px;
+    cursor: pointer;
+}
+header p{font-size: 22px;}
+a:visited{color:var(--txtclr);}
+a:hover, a:focus, a:active{color:var(--txtclr);}
+.logo{color:var(--txtclr);text-decoration:none;background-color:var(--bgclr);}
+.status{text-decoration:underline;}
+.calign{
+    justify-content:center;
+    align-items:center;
 }
